[gd_scene load_steps=7 format=2]

[ext_resource path="res://content/keeper/keeper59/tunnel/Tunnel.gd" type="Script" id=1]
[ext_resource path="res://content/keeper/keeper59/tunnel/tunnel_entrance.png" type="Texture" id=2]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=3]
[ext_resource path="res://content/sounds/Locations/Drillbot/DigDrillbot.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 11 )

[node name="Tunnel" type="Node2D"]
z_index = 24
script = ExtResource( 1 )

[node name="LeftEntrance" type="Sprite" parent="."]
position = Vector2( -11, 0 )
rotation = -1.5708
texture = ExtResource( 2 )

[node name="LeftCarryArea" type="Area2D" parent="LeftEntrance"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftEntrance/LeftCarryArea"]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="RightEntrance" type="Sprite" parent="."]
position = Vector2( 11, 0 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="RightCarryArea" type="Area2D" parent="RightEntrance"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightEntrance/RightCarryArea"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="TunnelDrillSound" parent="." instance=ExtResource( 3 )]
stream = ExtResource( 4 )
volume_db = -5.185
pitch_scale = 10.0
bus = "Mine"
randomPitch = 0.8
maxAudibleDistance = 240.0
minAudibleDistance = 50.0

[connection signal="body_entered" from="LeftEntrance/LeftCarryArea" to="." method="_on_LeftCarryArea_body_entered"]
[connection signal="body_exited" from="LeftEntrance/LeftCarryArea" to="." method="_on_LeftCarryArea_body_exited"]
[connection signal="body_entered" from="RightEntrance/RightCarryArea" to="." method="_on_RightCarryArea_body_entered"]
[connection signal="body_exited" from="RightEntrance/RightCarryArea" to="." method="_on_RightCarryArea_body_exited"]
